en_GB/assets/stylesheets/application.css
/* ... */
.hide-text {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0; }

.input-block-level {
  display: block;
  width: 100%;
  min-height: 30px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }

.row-container {
  max-width: 1116px;
  margin-right: auto;
  margin-left: auto;
  *zoom: 1; }

.row-container:before,
.row-container:after {
  display: table;
  content: "";
  line-height: 0; }

.row-container:after {
  clear: both; }

@media (min-width: 1200px) {
  .row-container {
    padding: 0 18px; } }
@media (max-width: 1200px) {
  .row-container {
    padding: 0 10px; } }
@media (max-width: 767px) {
  .row-container {
    padding: 0 1%; } }
.language-switch {
  position: absolute;
  top: 8px;
  right: 20px; }
  .language-switch img {
    width: 40px; }

.clearfix {
  *zoom: 1; }

.clearfix:before,
.clearfix:after {
  display: table;
  content: "";
  line-height: 0; }

.clearfix:after {
  clear: both; }

.hide-text {
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0; }

.input-block-level {
  display: block;
  width: 100%;
  min-height: 30px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }

/**************************
*
*	GENERAL
*
**************************/
.camera_wrap {
  direction: ltr;
  display: none;
  position: relative;
  z-index: 0;
  width: 100%; }

.camera_wrap img,
.camera_wrap ol,
.camera_wrap ul,
.camera_wrap li,
.camera_wrap table,
.camera_wrap tbody,
.camera_wrap tfoot,
.camera_wrap thead,
.camera_wrap tr,
.camera_wrap th,
.camera_wrap td {
  background: none;
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  list-style: none; }

.camera_wrap .camera_thumbs_wrap a,
.camera_wrap .camera_thumbs_wrap img,
.camera_wrap .camera_thumbs_wrap ol,
.camera_wrap .camera_thumbs_wrap ul,
.camera_wrap .camera_thumbs_wrap li,
.camera_wrap .camera_thumbs_wrap table,
.camera_wrap .camera_thumbs_wrap tbody,
.camera_wrap .camera_thumbs_wrap tfoot,
.camera_wrap .camera_thumbs_wrap thead,
.camera_wrap .camera_thumbs_wrap tr,
.camera_wrap .camera_thumbs_wrap th,
.camera_wrap .camera_thumbs_wrap td {
  background: none;
  border: 0;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  list-style: none; }

.camera_wrap img {
  max-width: none !important; }

.camera_wrap .camera_fakehover {
  height: 100%;
  min-height: 60px;
  position: relative;
  width: 100%;
  z-index: 1; }

.camera_wrap .camera_pag .camera_pag_ul {
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: right; }

.camera_wrap .camera_pag .camera_pag_ul li {
  -webkit-border-radius: 8px;
  -moz-border-radius: 8px;
  border-radius: 8px;
  cursor: pointer;
  display: inline-block;
  height: 16px;
  margin: 20px 5px;
  position: relative;
  text-align: left;
  text-indent: 9999px;
  width: 16px;
  background: #b7b7b7; }

.camera_wrap .camera_pag .camera_pag_ul li > span {
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
  height: 8px;
  left: 4px;
  overflow: hidden;
  position: absolute;
  top: 4px;
  width: 8px;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease; }

.camera_wrap .camera_pag .camera_pag_ul li.cameracurrent > span,
.camera_wrap .camera_pag .camera_pag_ul li:hover > span {
  -moz-box-shadow: 0;
  -webkit-box-shadow: 0;
  box-shadow: 0;
  background: #434648; }

.camera_src {
  display: none; }

.cameraCont,
.cameraContents {
  height: 100%;
  position: relative;
  width: 100%;
  z-index: 1; }

.cameraSlide {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%; }

.cameraContent {
  bottom: 0;
  display: none;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%; }

.camera_target {
  bottom: 0;
  height: 100%;
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  text-align: left;
  top: 0;
  width: 100%;
  z-index: 0; }

.camera_overlayer {
  bottom: 0;
  height: 100%;
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
  z-index: 0; }

.camera_target_content {
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 2; }

.camera_target_content .camera_link {
  background: url(../images/blank.gif);
  display: block;
  height: 100%;
  text-decoration: none; }

.camera_loader {
  background: #ffffff url(../images/camera-loader.gif) no-repeat center;
  background: rgba(255, 255, 255, 0.9) url(../images/camera-loader.gif) no-repeat center;
  border: 1px solid #ffffff;
  -webkit-border-radius: 18px;
  -moz-border-radius: 18px;
  border-radius: 18px;
  height: 36px;
  left: 50%;
  overflow: hidden;
  position: absolute;
  margin: -18px 0 0 -18px;
  top: 50%;
  width: 36px;
  z-index: 3; }

.camera_bar {
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  z-index: 3; }

.camera_thumbs_wrap.camera_left .camera_bar,
.camera_thumbs_wrap.camera_right .camera_bar {
  height: 100%;
  position: absolute;
  width: auto; }

.camera_thumbs_wrap.camera_bottom .camera_bar,
.camera_thumbs_wrap.camera_top .camera_bar {
  height: auto;
  position: absolute;
  width: 100%; }

.camera_nav_cont {
  height: 65px;
  overflow: hidden;
  position: absolute;
  right: 9px;
  top: 15px;
  width: 120px;
  z-index: 4; }

.camera_caption {
  bottom: 0;
  display: block;
  position: absolute;
  width: 100%;
  color: #fff; }

.camera_caption > div {
  padding: 10px 20px;
  background: #000;
  background: rgba(0, 0, 0, 0.8); }

.camerarelative {
  overflow: hidden;
  position: relative; }

.imgFake {
  cursor: pointer; }
/* ... */

